Unit testing. Disable links on first commit. Initial stats page.